# psn-sale-parser

./: Makefile  README.md  pyproject.toml
src/: config.py  main.py
src/json/: all_pages_data.json
src/storage/: sales.json
src/utils/: parser.py  regex.py
